--- a/lazyman.css
+++ b/lazyman.css
@@ -1,3 +1,4 @@
+/*深蓝色按钮*/
 a.lm-darkblue {
   display: inline-block;
   position: relative;
@@ -37,7 +38,7 @@ a.lm-darkblue:active {
 }
 
 
-
+/*灰色按钮*/
 a.lm-gray {
   display: inline-block;
   position: relative;
@@ -77,7 +78,7 @@ a.lm-gray:active {
 }
 
 
-
+/*天蓝色按钮*/
 a.lm-blue {
   display: inline-block;
   position: relative;
@@ -117,7 +118,7 @@ a.lm-blue:active {
 }
 
 
-
+/*红色按钮*/
 a.lm-red {
   display: inline-block;
   position: relative;
@@ -157,7 +158,7 @@ a.lm-red:active {
 }
 
 
-
+/*绿色按钮*/
 a.lm-green {
   display: inline-block;
   position: relative;
@@ -197,7 +198,7 @@ a.lm-green:active {
 }
 
 
-
+/*紫色按钮*/
 a.lm-purple {
   display: inline-block;
   position: relative;
@@ -237,7 +238,7 @@ a.lm-purple:active {
 }
 
 
-
+/*橙色按钮*/
 a.lm-orange {
   display: inline-block;
   position: relative;
